# ai-mail-parser-aggregator

./: .env.example  .funcignore  .gitignore  README.md  application.py  docker-compose.yml  function_app.py  host.json  memgraph-init.cypher  pyproject.toml
analysis/: mail_list_analysis.ipynb  mail_sample_analysis.ipynb
api/: application_model.py  audit_api_router.py  processing_api_router.py
bruno/AIMailParser/: Azure GetRecentAudits.bru  Azure Process emails range.bru  Get full mail by id.bru  Get mail list.bru  GetRecentAudits.bru  Process emails range.bru  Process emails.bru  bruno.json
service/: mail_fetcher.py  util.py
service/database/: azure_nosql_repo.py  azure_service.py  knowledge queries.txt  knowledge_database.py
service/file/: azure_blob_repo.py
service/llm/: knowledge_extraction_llm.py
service/mail/: mail_fetcher.py  mail_processor.py
service/text/: __init__.py  newsletter_cleaner.py  text_processor.py
test/: cleaned_mail_sample.json  mail_sample.json
